--- a/Keras_vgg16.ipynb
+++ b/Keras_vgg16.ipynb
@@ -84,8 +84,8 @@
         "id": "Z-J8yA7RvxhI"
       },
       "source": [
-        "train_path = '/content/drive/My Drive/seg/seg_test'  # ~350 images each\n",
-        "test_path = '/content/drive/My Drive/keras_data/train' # 110 images each\n",
+        "train_path = '/content/drive/My Drive/keras_data/train' # 110 images each\n",
+        "test_path = '/content/drive/My Drive/seg/seg_test'  # ~350 images each\n",
         "#valid_path = "
       ],
       "execution_count": null,
